--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "recipe-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bobmatyas.github.io/recipe-app",
   "dependencies": {
     "axios": "^0.19.0",
     "details-element-polyfill": "^2.4.0",
     "details-polyfill": "^1.1.0",
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -14,6 +16,8 @@
     "styled-components": "^4.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
